peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "peer-auth"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
