google-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-google-through-egress-gateway
spec:
  hosts:
    - "www.google.com"
  gateways:
  - mesh
  - istio-system/egress-gateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.google.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: google
        port:
          number: 8444
  tcp:
  - match:
    - gateways:
      # - istio-system/istio-egressgateway
      - istio-system/egress-gateway
      port: 8444
    route:
    - destination:
        host: www.google.com
        port:
          number: 443
      weight: 100
