register.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: default
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
